--- a/Embryo-Project-Deeplearning/params.yaml
+++ b/Embryo-Project-Deeplearning/params.yaml
@@ -1,1 +1,9 @@
-key: values
+IMAGESIZE: 288
+CHANNEL: 3
+AUGMENTATION: 1000
+EPOCHS: 1
+TRAIN_SPLIT: 0.9
+TEST_SPLIT: 0.1
+BATCH_SIZE: 32
+WEIGHT: efficientvit_b2.r288_in1k
+LEARNING_RATE: 0.0001
